[workspace]
resolver = "2"
members = [
    "crates/probe-core",
    "crates/webrtc-doctor",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/jamalag/webrtc-doctor"
authors = ["Amir Eshaq <jamalag@hotmail.com>"]
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Signaling WS/WSS probe. `rustls-tls-webpki-roots` keeps us pure-Rust and
# trusts Mozilla's bundled CA roots. The TLS stack here is also what TURNS
# will reuse when that check lands, so the dep weight pulls double duty.
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
