[workspace]
resolver = "2"
members = [
    "crates/probe-core",
    "crates/webrtc-doctor",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/jamalag/webrtc-doctor"
authors = ["Amir Eshaq <jamalag@hotmail.com>"]
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Signaling WS/WSS probe. `rustls-tls-webpki-roots` keeps us pure-Rust and
# trusts Mozilla's bundled CA roots. The TLS stack here is also what TURNS
# uses, so the dep weight pulls double duty.
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
# TURNS — TURN-over-TLS allocation. tokio-rustls wraps a TcpStream in
# rustls; webpki-roots gives us Mozilla's trust anchors so we don't need
# the system trust store.
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
webpki-roots = "0.26"
# Host-interface enumeration for the ICE candidate-gathering check. Tiny
# cross-platform crate, no transitive deps of consequence. We use it only
# to list local addresses; binding/socket work goes through tokio.
if-addrs = "0.13"
# DTLS loopback check. webrtc-rs's pure-Rust DTLS implementation; the only
# real choice given rustls still doesn't support DTLS. We use it solely
# for a handshake-against-self diagnostic, not for a full transport.
webrtc-dtls = "0.12"
# webrtc-dtls's listener API exposes `Listener::accept`/`addr` from
# this crate's `Conn`/`Listener` traits; we need them in scope to call
# either method. webrtc-dtls doesn't re-export them, so we depend on
# webrtc-util directly and pin to the same version webrtc-dtls 0.12
# pulled in transitively to avoid duplicate copies in the dep graph.
webrtc-util = { version = "0.11", default-features = false, features = ["conn"] }
# SHA-256 for the DTLS peer-cert fingerprint. webrtc-dtls returns peer
# certs as DER bytes; the SDP `a=fingerprint` format hashes that and
# emits colon-separated hex. We already pull sha1 for STUN MI; sha2 is
# the corresponding hash family.
sha2 = "0.10"
